[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/enemies/GroundEnemy.png" type="Texture" id=1]
[ext_resource path="res://src/scripts/RollingEnemy.gd" type="Script" id=2]
[ext_resource path="res://src/prefabs/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/prefabs/Hitbox.tscn" type="PackedScene" id=4]

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 0, 512, 512 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "roll",
"speed": 3.0
} ]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 60.5, 63.5 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 61.5, 64 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 60.5, 63.5 )

[node name="RollingEnemy" type="KinematicBody2D" groups=["Enemies"]]
collision_layer = 4
collision_mask = 15
script = ExtResource( 2 )
walk_speed = 250.0

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -31 )
scale = Vector2( 0.25, 0.25 )
frames = SubResource( 7 )
animation = "roll"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.5, -31.5 )
shape = SubResource( 8 )

[node name="FloorChecker" type="RayCast2D" parent="."]
cast_to = Vector2( 0, 43 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]

[node name="Box" parent="Hurtbox" index="0"]
position = Vector2( -1.5, -32 )
shape = SubResource( 9 )

[node name="Hitbox" parent="." instance=ExtResource( 4 )]

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( -1.5, -31.5 )
shape = SubResource( 10 )

[connection signal="child_entered_tree" from="." to="." method="_on_RollingEnemy_child_entered_tree"]
[connection signal="tree_exiting" from="." to="." method="_on_RollingEnemy_tree_exiting"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_Hurtbox_body_entered"]

[editable path="Hurtbox"]
[editable path="Hitbox"]
